# holes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
requirements/: test.txt
src/holes/: __init__.py  expressions.py  holes.py
tests/: test_holes.py  tests.py
