[build-system]
requires = [
    "setuptools >= 40.8.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "holes"
version = "0.1.0"
description = "Declarative lambdas using holes."
authors = [
    {name = "Luis Morera De La Cruz", email="capruce@gmail.com"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Topic :: Software Development",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []


[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = "black"
known_third_party = []


[tool.mypy]
show_error_codes = true
strict = true
warn_unused_ignores = true
warn_unused_configs = true


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
